# desdemona

./: .gitignore  README.md  pyproject.toml  srv.py
desdemona/: create_game.py  games.py  messages.py  othello.py  perft.py  player.py  server.py  viewer.py
desdemona/static/: style.css
desdemona/templates/: base.html  home.html  newgame.html  view.html
