[tool.poetry]
name = "desdemona"
version = "0.1.0"
description = ""
authors = ["Aidan Swope <aidanswope@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.20.1"
coolname = "^1.1.0"
python-socketio = {extras = ["client"], version = "^5.0.4"}
dataclasses-json = "^0.5.2"
Flask = "^1.1.2"
Flask-SocketIO = "^5.0.1"
eventlet = "^0.30.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
black = {version = "^20.8b1", allow-prereleases = true}
rope = "^0.18.0"

[tool.poetry.scripts]
server = 'desdemona.server:run'
player = 'desdemona.player:run'
viewer = 'desdemona.viewer:run'
create_game = 'desdemona.create_game:run'
webserver = 'webserver.__main__:run'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
