[tool.poetry]
name = "desdemona"
version = "0.1.4"
description = "A server for othello AI games"
authors = ["Brian Cruz <cruz.s.brian@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.19.1"
coolname = "^1.1.0"
python-socketio = {extras = ["client"], version = "^5.0.4"}
dataclasses-json = "^0.5.2"
Flask = "^1.1.2"
Flask-SocketIO = "^5.0.1"
eventlet = "^0.30.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
black = {version = "^20.8b1", allow-prereleases = true}
rope = "^0.18.0"

[tool.poetry.scripts]
desdemona-server = 'desdemona.server:run'
desdemona-player = 'desdemona.player:run'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
